# CafePlotter

./: README.md  pyproject.toml
examples/: result_summary.tsv
examples/gamma_dist/: Gamma_category_likelihoods.txt  Gamma_clade_results.txt  Gamma_family_likelihoods.txt  Gamma_family_results.txt  Gamma_results.txt
examples/singlelambda/: Base_branch_probabilities.tab  Base_change.tab  Base_count.tab  Base_family_likelihoods.txt  Base_family_results.txt  Base_results.txt
src/cafeplotter/: __init__.py  cafeparser.py  treeplotter.py
src/cafeplotter/scripts/: cafeplotter.py
tests/: conftest.py  test_main.py
tests/scripts/: test_cafeplotter.py
tests/testdata/gamma_dist/: Gamma_asr.tre  Gamma_branch_probabilities.tab  Gamma_change.tab  Gamma_count.tab
tests/testdata/singlelambda/: Base_asr.tre  Base_clade_results.txt
