[tool.poetry]
name = "cafeplotter"
version = "0.2.0"
description = "A tool for plotting CAFE5 gene family expansion/contraction result"
authors = ["moshi4"]
license = "MIT"
repository = "https://github.com/moshi4/CafePlotter/"
readme = "README.md"
keywords = [
    "bioinformatics",
    "phylogenetics",
    "molecular-evolution",
    "visualization",
    "matplotlib",
]
classifiers = [
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Framework :: Matplotlib",
]
include = ["tests"]
packages = [{ include = "cafeplotter", from = "src" }]

[tool.poetry.scripts]
cafeplotter = "cafeplotter.scripts:cafeplotter.main"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=src --tb=line --cov-report=xml --cov-report=term"
testpaths = ["tests"]

# Lint Rules: https://beta.ruff.rs/docs/rules
[tool.ruff]
select = ["E", "F", "W", "I", "D", "B"]
ignore = [
    "D100",
    "D101",
    "D104",
    "D105",
    "D205",
    "D400",
    "D401",
    "D403",
    "D415",
    "B905",
]
src = ["src", "tests"]
line-length = 88

[tool.ruff.pydocstyle]
convention = "numpy"

[tool.poetry.dependencies]
python = ">=3.8.1"
matplotlib = ">=3.5.3"
biopython = ">=1.80"
numpy = ">=1.21.1"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.2.1"
pytest-cov = ">=4.0.0"
black = ">=23.1.0"
ruff = ">=0.0.264"
ipykernel = ">=6.21.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
